Atualização e modificações dentro das chamdas das paginas, setei um Id para a chamada de cada sessão da páginas onde da possibilidade do usuário achar o que precisa na mesma pagina

--- a/parrot-cay/index.html
+++ b/parrot-cay/index.html
@@ -12,24 +12,25 @@
 <body>
 	
 	<header>
-		<a href="#"><img src="assets/images/logo.png" alt="hotel Paraiso"></a>
+		<a href="index.html"><img src="assets/images/logo.png" alt="hotel Paraiso"></a>
 
 		<nav>
 			<li><a href="">Home</a></li>
-			<li><a href="">Sobre</a></li>
-			<li><a href="">Reservas</a></li>
-			<li><a href="">Contatos</a></li>
+			<li><a href="#quem-somos">Sobre</a></li>
+			<li><a href="#reserva">Reservas</a></li>
+			<li><a href="#contato">Contatos</a></li>
 		</nav>
 	</header>
 	
 	<section class="hero">
 		<h1>Conheça este paraíso chamado Parroty Cay</h1>
 		<h3>"Acochego, Conforto, Simpatia e Alto Astral"</h3>
-		<a href="" class="btn" href="">Saiba mais</a>
+		<a href="" class="btn" href="#">Saiba mais</a>
 	</section>
 
-	<section class="conheca-o-hotel">
-		<h3>Conhce o Hotel Parrot Cay</h3>
+	<section class="conheca-o-hotel ">
+		
+		<h3 id="quem-somos">Conhce o Hotel Parrot Cay</h3>
 		<p>Feche os olhos e imagine o paraíso. Um lugar no Ilheus Caribe e banhado pelo mar, onde você encontra paz, tranquilidade conforto e comodidade.</p>
 		<hr>
 		<ul class="grid">
@@ -66,7 +67,7 @@
 	</section>
 
 	<section class="newslatter">
-		<h3>Newsletter</h3>
+		<h3 id="contato">Newsletter</h3>
 		<p>Assine nossa newslatter para se manter atualizado com nossos serviços e a programação de nossos eventos culturais.</p>
 		<hr>
 
